# mini-projects

pamol-account-data-prj/: Anchor.toml
pamol-account-data-prj/programs/pamol-account-data-prj/: Cargo.toml
pamol-account-data-prj/programs/pamol-account-data-prj/src/: constants.rs  errors.rs  lib.rs
pamol-account-data-prj/programs/pamol-account-data-prj/src/instructions/: create_data.rs  mod.rs
pamol-account-data-prj/tests/: pamol-account-data-prj.ts
pamol-checking-accounts/: Anchor.toml
pamol-checking-accounts/programs/pamol-checking-accounts/: Cargo.toml
pamol-checking-accounts/programs/pamol-checking-accounts/src/: lib.rs
pamol-checking-accounts/tests/: pamol-checking-accounts.ts
pamol-close-account-prj/: Anchor.toml
pamol-close-account-prj/programs/pamol-close-account-prj/: Cargo.toml
pamol-close-account-prj/programs/pamol-close-account-prj/src/: lib.rs
pamol-close-account-prj/tests/: pamol-close-account-prj.ts
pamol-counter-prj/: Anchor.toml
pamol-counter-prj/programs/pamol-counter-prj/: Cargo.toml
pamol-counter-prj/programs/pamol-counter-prj/src/: lib.rs
pamol-counter-prj/tests/: pamol-counter-prj.ts
pamol-favorite-prj/: Anchor.toml
pamol-favorite-prj/programs/pamol-favorite-prj/: Cargo.toml
pamol-favorite-prj/programs/pamol-favorite-prj/src/: lib.rs
pamol-favorite-prj/tests/: pamol-favorite-prj.ts
pamol-hello-solana/: Anchor.toml
pamol-hello-solana/programs/pamol-hello-solana/: Cargo.toml
pamol-hello-solana/programs/pamol-hello-solana/src/: lib.rs
pamol-hello-solana/tests/: pamol-hello-solana.ts
(+12 files in other folders)
